# Dynagenic

./: .gitignore  LICENSE.txt  README.md  meson.build
data/: ApiVersions.json  com.github.levoment.dynagenic.desktop
meson/: makeDirectories.sh  post_install.py
src/: ApiVersions.vala  Dynagenic.vala  InputVerifier.vala  LoaderVersions.vala  MainApplication.glade  Versions.vala
